# GyverPortal

./: .gitignore  clang-format.bat
Test/: Arduino.h  CMakeLists.txt  DARK.css  FS.h  GP_JS_TOP.js  Print.cpp  WString.cpp  WString.h  WebServer.h  WiFi.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tests.md  xmlhighlighter.cpp  xmlhighlighter.h
Test/QtWebApp-1.8.6/Demo1/src/: global.h  main.cpp  requestmapper.cpp  requestmapper.h
Test/QtWebApp-1.8.6/Demo1/src/controller/: dumpcontroller.cpp  dumpcontroller.h  fileuploadcontroller.cpp  fileuploadcontroller.h  formcontroller.cpp  formcontroller.h  logincontroller.cpp  logincontroller.h  sessioncontroller.cpp  sessioncontroller.h  templatecontroller.cpp  templatecontroller.h
Test/QtWebApp-1.8.6/Demo2/src/: main.cpp  requesthandler.cpp  requesthandler.h
Test/QtWebApp-1.8.6/QtWebApp/httpserver/: httpconnectionhandler.cpp  httpconnectionhandler.h  httpconnectionhandlerpool.cpp  httpconnectionhandlerpool.h  httpcookie.cpp  httpcookie.h  httpglobal.cpp  httpglobal.h  httplistener.cpp  httplistener.h  httprequest.cpp  httprequest.h  httprequesthandler.cpp  httprequesthandler.h  httpresponse.cpp  httpresponse.h  httpsession.cpp  httpsession.h  httpsessionstore.cpp  httpsessionstore.h  staticfilecontroller.cpp  staticfilecontroller.h
Test/QtWebApp-1.8.6/QtWebApp/logging/: dualfilelogger.cpp  dualfilelogger.h  filelogger.cpp  filelogger.h  logger.cpp  logger.h  logglobal.h  logmessage.cpp  logmessage.h
Test/QtWebApp-1.8.6/QtWebApp/templateengine/: template.cpp  template.h  templatecache.cpp  templatecache.h  templateglobal.h  templateloader.cpp  templateloader.h
Test/hw/: Arduino.h  DNSServer.h  FS.h  Print.h  WString.cpp  WString.h  WiFi.h
examples/builds/dynamicComponents/: dynamicComponents.ino
examples/builds/selectBuild/: selectBuild.ino
examples/customComponents/: custom.h  customComponents.ino
examples/demos/actionClick/: actionClick.ino
examples/demos/actionForm/: actionForm.ino
examples/demos/actionUpdate/: actionUpdate.ino
examples/demos/buttonHold/: buttonHold.ino
examples/demos/canvas/: canvas.ino
examples/demos/demoAllComponents/: demoAllComponents.ino
examples/demos/demoAuth/: demoAuth.ino
examples/demos/demoColor/: demoColor.ino
examples/demos/demoLog/: demoLog.ino
examples/demos/demoLogManual/: demoLogManual.ino
examples/demos/esp32-stream/: camera.h  esp32-stream.ino
examples/demos/jQupdate/: jQupdate.ino
examples/demos/objTest/: objTest.ino
examples/demos/objects/: objects.ino
examples/demos/onlineCheck/: onlineCheck.ino
examples/demos/pageTitle/: pageTitle.ino
examples/demos/plotAjax/: plotAjax.ino
examples/demos/plotStatic/: plotStatic.ino
examples/demos/plotStock/: plotStock.ino
examples/demos/popupAlert/: popupAlert.ino
examples/demos/popupConfirm/: popupConfirm.ino
examples/demos/popupPrompt/: popupPrompt.ino
examples/demos/saveSettings/: saveSettings.ino
examples/demos/systemInfo/: systemInfo.ino
examples/demos/tableWrandom/: tableWrandom.ino
examples/design/GridAndBlocks/: GridAndBlocks.ino
examples/design/blocks/: blocks.ino
examples/design/blocks2/: blocks2.ino
examples/design/boxes/: boxes.ino
examples/design/boxesMacro/: boxesMacro.ino
examples/design/icons/: icons.ino
examples/design/layoutApp/: layoutApp.ino
examples/design/layoutDashboard/: layoutDashboard.ino
examples/design/multiPageButtons/: multiPageButtons.ino
examples/design/multiPageTabLinks/: multiPageTabLinks.ino
examples/design/multiPageTabs/: multiPageTabs.ino
examples/design/multiPageTabsManual/: multiPageTabsManual.ino
examples/design/slidersEqual/: slidersEqual.ino
examples/design/tables/: tables.ino
examples/design/ui/: ui.ino
examples/design/uiManual/: uiManual.ino
examples/files/fileDownloadAuto/: fileDownloadAuto.ino
examples/files/fileDownloadManual/: fileDownloadManual.ino
examples/files/fileEmbed/: fileEmbed.ino
examples/files/fileUploadAuto/: fileUploadAuto.ino
examples/files/fileUploadManual/: fileUploadManual.ino
examples/projects/eepromLogPlot/: eepromLogPlot.ino
examples/projects/webSerial/: webSerial.ino
examples/projects/wifiLogin/: wifiLogin.ino
examples/system/OTAcustom/: OTAcustom.ino
examples/system/OTAupdate/: OTAupdate.ino
examples/system/accessNetIp/: accessNetIp.ino
examples/system/localLambda/: localLambda.ino
examples/system/localPortal/: localPortal.ino
examples/system/localPortal2/: localPortal2.ino
examples/system/rtos2core/: rtos2core.ino
src/: CamStream.h  CustomOTA.h  GyverPortal.cpp  GyverPortal.h  TimeTicker.h  buildMacro.h  builder.h  canvas.h  list.h  log.h  objects.h  parsers.h  portal.h  scripts.h  src.ino  themes.h  utils.cpp  utils.h
